welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: type array
  var T = new array[Color](taille)
              ^